final adjustment